Containers/Helm/web2proj/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web2proj-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /grafana(/|$)(.*)
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 3000
      - path: /web2proj(/|$)(.*)
        backend:
          service:
            name: php-service
            port:
              number: 8000
